--- a/index.html
+++ b/index.html
@@ -4,13 +4,24 @@
     <meta charset="UTF-8">
     <title>Making a Clay Printer</title>
     <style>
-        body { margin: 20px; }
+        @font-face {
+            font-family: 'Ugly Dave';
+            src: url('/fonts/UglyDaveRegular.woff2') format('woff2'),
+                url('/fonts/UglyDaveRegular.woff') format('woff');
+            font-weight: normal;
+            font-style: normal;
+            font-display: swap;
+        }
+        body { 
+            margin: 20px; 
+            font-family: 'Ugly Dave', sans-serif;}
         .menu { margin-bottom: 10px; }
         .menu button {
             margin-right: 10px;
             padding: 4px 8px;
             font-size: 14px;
             cursor: pointer;
+            font-family: 'Ugly Dave', sans-serif;
         }
         .image-container img {
             width: 90%;
@@ -20,16 +31,18 @@
             border: 1px solid #ccc;
             border-radius: 8px;
         }
+        
     </style>
+<!--    <link rel="stylesheet" href="load_font.css">-->
 </head>
-<body>
-    
+<body>    
     <div class="menu">
         <button onclick="showImage('design')">Home</button>
         <button onclick="showImage('subsystem')">Subsystems</button>
         <button onclick="showImage('parts')">Parts</button>
         <button onclick="showImage('extruder')">Extruder Head</button>
     </div>
+    <h1>Hello world</h1>
     <div class="image-container" id="imageContainer">
         <!-- Image will appear here -->
     </div>
