--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <style>
         @font-face {
             font-family: 'Ugly Dave';
+            src: url('/making-a-clay-printer/fonts/UglyDaveRegular.woff2') format('woff2'),
+                url('/making-a-clay-printer/fonts/UglyDaveRegular.woff') format('woff');
+            font-weight: normal;
+            font-style: normal;
+            font-display: swap;
+        }
+        @font-face {
+            font-family: 'Ugly Dave';
             src: url('/fonts/UglyDaveRegular.woff2') format('woff2'),
                 url('/fonts/UglyDaveRegular.woff') format('woff');
             font-weight: normal;
@@ -21,7 +29,6 @@
             padding: 4px 8px;
             font-size: 14px;
             cursor: pointer;
-            font-family: 'Ugly Dave', sans-serif;
         }
         .image-container img {
             width: 90%;
