added line in index.html

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         <button onclick="showImage('extruder')">Extruder Head</button>
     </div>
     <h1>Hello world</h1>
+    <h2>Hello Moi</h2>
     <div class="image-container" id="imageContainer">
         <!-- Image will appear here -->
     </div>
