--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                 url('/making-a-clay-printer/fonts/UglyDaveRegular.woff') format('woff');
             font-weight: normal;
             font-style: normal;
-            font-display: swap;
+            font-display: block;
         }
         @font-face {
             font-family: 'Ugly Dave';
@@ -18,7 +18,7 @@
                 url('/fonts/UglyDaveRegular.woff') format('woff');
             font-weight: normal;
             font-style: normal;
-            font-display: swap;
+            font-display: block;
         }
         body { 
             margin: 20px; 
@@ -51,6 +51,7 @@
     </div>
     <h1>Hello world</h1>
     <h2>Hello Moi</h2>
+    <h3>adfjkla;dfsj</h3>
     <div class="image-container" id="imageContainer">
         <!-- Image will appear here -->
     </div>
