fix: update font and image paths for consistency

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <style>
     @font-face {
         font-family: 'Ugly Dave';
-        src: url('/fonts/UglyDaveRegular.woff2') format('woff2'),
-            url('/fonts/UglyDaveRegular.woff') format('woff');
+        src: url('fonts/UglyDaveRegular.woff2') format('woff2'),
+            url('fonts/UglyDaveRegular.woff') format('woff');
         font-weight: normal;
         font-style: normal;
         font-display: swap;
@@ -52,7 +52,7 @@
   <!-- Hero Image Background -->
   <div id="bg-div" class="w-full h-screen flex items-center justify-center">
     <h1 class="text-4xl font-bold absolute -rotate-90 left-0">Making a Clay* Printer</h1>
-    <img src="/images/slideshow.webp" class="w-full md:w-1/2" alt="Background" />
+    <img src="images/slideshow.webp" class="w-full md:w-1/2" alt="Background" />
   </div>
 
   <!-- Floating Texts (Navigation Triggers) -->
