--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     }
     body { 
       font-family:'Courier New', Courier, monospace;
-      color: #454070;
+      color: #322520;
       margin: 20px; 
-      background-color: rgb(128, 183, 232);
+      background-color:#f9ab6b;
     }
     h1, h2, h3 {
       font-family: 'Ugly Dave', sans-serif;
@@ -44,14 +44,14 @@
     }
     /* Hover effect for floating text */
     .floating-text:hover {
-      color: #454070; 
+      color: #f27545; 
       transform: scale(1.1);
       transition: transform 0.2s ease;
     }
   </style>
 </head>
 <body class="relative overflow-x-hidden">
-  
+  <a href="https://github.com/fablabbers/making-a-clay-printer" class="github-corner" aria-label="View source on GitHub"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#151513; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"/><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"/><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"/></svg></a><style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
   <!-- Hero Image Background -->
   <div id="bg-div" class="w-full h-screen flex items-center justify-center">
     <div class="items-center flex">
@@ -65,15 +65,17 @@
   <!-- Floating Texts (Navigation Triggers) -->
   <div id="about-btn" class="absolute floating-text text-4xl md:text-8xl" onclick="scrollToSection('about')">About</div>
   <div id="process-btn" class="absolute floating-text text-4xl md:text-8xl" onclick="scrollToSection('process')">Process</div>
-  <div id="feed-btn" class="absolute floating-text text-4xl md:text-8xl" onclick="scrollToSection('feed')">Feed</div>
+  <!--<div id="feed-btn" class="absolute floating-text text-4xl md:text-8xl" onclick="scrollToSection('feed')">Feed</div>-->
   
   <!-- Content Sections -->
   <div id="about" class="min-h-screen bg-white p-10 relative">
     <a href="#about"><h2 class="text-3xl font-bold">ABOUT</h2></a>
     <div class="grid justify-center grid-cols-1 md:grid-cols-2 gap-8 mt-4">
-      <div><h3 class="text-3xl font-bold">The project</h3><p>[WIP] It aims to facilitate an exploration in different 3D printing materials by <br>1) the disassembly of an existing printer main frame, <br>2) modifying its different components to facilitate the chosen material’s smooth printing, and <br>3) calibrating the formula used for the printing clay.</p>
+      <div><h3 class="text-3xl font-bold">The project</h3><p>Making-a-Clay*-Printer(MC*P) reimagines 3D printing—swapping plastic for clay and other pastes. Thanks to open-source tools, we hacked a Creality CR10, rigged it to a compressor, and let it print malleable materials. Our first runs used custom slip-cast-like clay from our friends at the UPCFA Ceramics Studio.
+        <br><br>The “*” hints at materials we plan for the future—paste-like bio-composites and more. More than a machine, MC*P is a playground for experimentation, material innovation and collaboration.
+        <br><br> We believe in open collaboration. Our models and designs are free and open-source. </p>
       </div>
-      <div><h3 class="text-3xl font-bold">The makers</h3><p>[WIP] This 3D Clay Printer is a project of the Batch 5 Fablab Mentees of the UP CFA FabLab Mentorship Program. Core team includes the following Batch 5 mentees: Eliza, Jayvee, Kissa, Moira, Zeeb,<br>Resident fablabbers: Ais, Jhoanna, Koji and <br><s>Elders</s> Mentors: Tito, Minnie, Robby</p>
+      <div><h3 class="text-3xl font-bold">The makers</h3><p>This is a project of the Batch 5 Fablab Mentees of the UP CFA FabLab Mentorship Program. Core team includes the following Batch 5 mentees: Eliza, Jayvee, Kissa, Moira, Zeeb,<br>Resident fablabbers: Ais, Jhoanna, Koji and <br><s>Elders</s> Mentors: Tito, Minnie, Robby</p>
       </div>
     </div>
   </div>
@@ -82,17 +84,21 @@
     <h2 class="text-3xl font-bold">PROCESS</h2>
     <div class="grid justify-center grid-cols-1 md:grid-cols-3 gap-8 mt-4">
       <div><h3 class="text-3xl font-bold">Overview</h3>
-        <a href="old_index.html">[Link to page with diagrams]</a><br>
-        <a href="">[Link to page with downloadable files]</a>
+        <p>The MC*P kit lets you to turn your Creality CR10S FDM printer into a multimaterial printer.<br><br>We based it on Circular Lab's Biomaterial Printer project (<a href= "https://github.com/fablabbcn/pasta-print-3d" class="font-medium text-blue-600 dark:text-blue-500 hover:underline" target="_blank">github link</a>)</p>
+        <!--<a href="old_index.html">[Link to page with diagrams]</a><br>-->
+        <img src="images/main_assembly.png" alt="Diagram of the Clay Printer" class="mt-4 mb-4"/>
+        
       </div>
-      <div><h3 class="text-3xl font-bold">Building the Printer</h3><p>[WIP]<br>Disassembly<br>Design and Modifications<br>Printing the parts<br>Assembly</p>
+      <div><h3 class="text-3xl font-bold">Building the Printer</h3><p>[WIP]<br>Disassembly<br>Design and Modifications
+        <br>
+        <a href="https://github.com/fablabbers/making-a-clay-printer/tree/main/downloads" class="font-medium text-blue-600 dark:text-blue-500 hover:underline" target="_blank">Downloads</a><br>Printing the parts<br>Assembly</p>
       </div>
-      <div><h3 class="text-3xl font-bold">Using the Printer</h3><p>[WIP]Link to guide</p>
+      <div><h3 class="text-3xl font-bold">Using the Printer</h3><p>Coming soon...</p>
       </div>
     </div>
   </div>
 
-  <div id="feed" class="min-h-screen bg-white p-10">
+  <!--<div id="feed" class="min-h-screen bg-white p-10">
     <h2 class="text-3xl font-bold">FEED</h2>
     <div class="grid justify-center grid-cols-1 md:grid-cols-2 gap-8 mt-4">
       <div><h3 class="text-3xl font-bold">Logs</h3><p>[WIP] </p>
@@ -100,7 +106,7 @@
       <div><h3 class="text-3xl font-bold">Release Notes</h3><p></p>
       </div>
     </div>
-  </div>
+  </div>-->
 
   <!-- Back to Top Button -->
   <div onclick="scrollToTop()" 
