building the printer

--- a/index.html
+++ b/index.html
@@ -90,15 +90,22 @@
         <img src="images/main_assembly.png" alt="Diagram of the Clay Printer" class="mt-4 mb-4"/>
         
       </div>
-      <div><h3 class="text-3xl font-bold">Building the Printer</h3><p>[WIP]<br>Disassembly<br>Design and Modifications
-        <br>
-        <br>Printing and cutting the parts
+      <div class="col-span-2"><h3 class="text-3xl font-bold">Building the Printer</h3>
+        <p>
+        <br>1. Disassembly
+        <br>2. Design and Modifications
+        <br>2.1. Parts to fabricate
         <br><a href="https://github.com/fablabbers/making-a-clay-printer/tree/main/downloads" class="font-medium text-blue-600 dark:text-blue-500 hover:underline" target="_blank">Downloads</a>
-        
-        <br>Assembly</p>
+        <br>2.2. Parts to buy
+        <br><a href="https://github.com/fablabbers/making-a-clay-printer/tree/main/downloads" class="font-medium text-blue-600 dark:text-blue-500 hover:underline" target="_blank">MakingAClayPrinter_BOM.xlsx </a>
+        <br>3. Assembly</p>
+        <img src="images/subsystems-01.jpg" alt="Subsystems of the Clay Printer" class="mt-4 mb-4"/>
+        <img src="images/parts-01.jpg" alt="Parts of the Clay Printer" class="mt-4 mb-4"/>
+        <img src="images/extruder-head-assembly-01.jpg" alt="Extruder Head of the Clay Printer" class="mt-4 mb-4"/>
+        <p><br>4. Using the printer (coming soon...)</p>
       </div>
-      <div><h3 class="text-3xl font-bold">Using the Printer</h3><p>Coming soon...</p>
-      </div>
+      <!--<div><h3 class="text-3xl font-bold">Using the Printer</h3><p>Coming soon...</p>
+      </div>-->
     </div>
   </div>
 
