--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <div id="about-btn" class="absolute floating-text text-4xl md:text-8xl" onclick="scrollToSection('about')">About</div>
   <div id="process-btn" class="absolute floating-text text-4xl md:text-8xl" onclick="scrollToSection('process')">Process</div>
   <!--<div id="feed-btn" class="absolute floating-text text-4xl md:text-8xl" onclick="scrollToSection('feed')">Feed</div>-->
-  <div id="feed-btn" class="absolute floating-text text-4xl md:text-8xl" onclick="scrollToSection('showcase')">Showcase</div>
+  <div id="showcase-btn" class="absolute floating-text text-4xl md:text-8xl" onclick="scrollToSection('showcase')">Showcase</div>
   
   <!-- Content Sections -->
   <div id="about" class="min-h-screen bg-white p-10 relative">
