removed elders, updated brochure

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <br><br>The “*” hints at materials we plan for the future—paste-like bio-composites and more. More than a machine, MC*P is a playground for experimentation, material innovation and collaboration.
         <br><br> We believe in open collaboration. Our models and designs are free and open-source. </p>
       </div>
-      <div><h3 class="text-3xl font-bold">The makers</h3><p>This is a project of the Batch 5 Fablab Mentees of the UP CFA FabLab Mentorship Program. Core team includes the following Batch 5 mentees: Eliza, Jayvee, Kissa, Moira, Zeeb,<br>Resident fablabbers: Ais, Jhoanna, Koji and <br><s>Elders</s> Mentors: Tito, Minnie, Robby</p>
+      <div><h3 class="text-3xl font-bold">The makers</h3><p>This is a project of the Batch 5 Fablab Mentees of the UP CFA FabLab Mentorship Program. Core team includes the following Batch 5 mentees: Eliza, Jayvee, Kissa, Moira, Zeeb,<br>Resident fablabbers: Ais, Jhoanna, Koji and <br> Mentors: Tito, Minnie, Robby</p>
       </div>
     </div>
   </div>
@@ -122,8 +122,8 @@
             'images/showcase/6.jpg',
             'images/showcase/7.jpg',
             'images/showcase/8.jpg',
-            'images/showcase/brochure_1.png',
-            'images/showcase/brochure_2.png'
+            'images/showcase/brochure_1.jpg',
+            'images/showcase/brochure_2.jpg'
           ];
 
           const showcase = document.querySelector('#showcase .grid');
